--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,51 @@
 body {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     color:#4c8ef8;
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Quicksand', sans-serif;
 
     margin: auto;
     text-align: center;
 }
 
 .header {
-    margin-top: 20%;
+    margin-top: 10%;
 }
 
+.scoreboard {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 300px;
+    
+    margin-left: 40.5%;
+}
+
+.scoreboard__name,
+.scoreboard__score {
+    padding: 10px;
+    text-align: center;
+}
+.scoreboard__name {
+    font-weight: bold;
+    border-bottom: 1px solid #ddd;
+}
+
+.scoreboard__name--one {
+    color: #009578;
+}
+
+.scoreboard__name--two {
+    color: #2d0095;
+}
+
+.scoreboard__score {
+    font-size: 2em;
+}
+
+
+
+
+/* Button */
 .gamebutton {
     color:#E5E7EB; 
     font-size: 18px;
