--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 
     margin: auto;
     text-align: center;
+
 }
 
 .header {
@@ -59,30 +60,29 @@ body {
 /* Scoreboard */
 .sb_names {
     display: flex;
-    gap: 12%;
-    
+    gap: 5%;
     justify-content: center;    
-    margin-left: 38%; 
+    justify-items: center;
 
-    width: 370px;
+    width: 100%;
 
     font-size: 25px;
-
-    border: solid #3882F6;
+    /* border: solid #3882F6; */
 }
 
 .sb_points {
     display: flex;
-    gap: 32%;
+    flex: auto;
+    gap: 9.8%;
     
-    justify-content: center;    
-    margin-left: 38%; margin-bottom: 2%;
-    padding-top: 2%; padding-bottom: 2%;
-    width: 370px;
+    justify-content: center;
+    justify-items: center;
 
+    width: 100%;
     font-size: 50px;
 
-    border: solid #3882F6;
+    margin-bottom: 2rem;
+    /* border: solid #3882F6; */
 }
 
 .rounds {
@@ -103,6 +103,8 @@ body {
     padding-left: 30px; padding-right: 30px;
     padding-top: 10px; padding-bottom: 10px;
 
+    width: 12rem;
+
     transition: all 0.2s;
     cursor: pointer;
 
@@ -119,13 +121,15 @@ body {
 
 .choices {
     display: flex;
-    margin-left: 36.7em;
+    justify-content: center;
     gap: 1em;
 }
 
 .reset {
     display: flex;
-    margin-left: 44.1em; margin-top: 1em;
+    margin-top: 1em; 
+    /* margin-left: -1.8rem; */
+    justify-content: center;
     
 }
 
